fixed text clip problem with overflow + now modal closing after add task

--- a/src/components/TaskItem/TaskItem.scss
+++ b/src/components/TaskItem/TaskItem.scss
@@ -23,6 +23,7 @@
 
 	&__title {
 		line-height: 120%;
+		max-width: rem(391);
 		display: -webkit-box;
 		-webkit-box-orient: vertical;
 		-webkit-line-clamp: 1;
