--- a/src/components/TaskList/TaskListLayout/TaskListLayout.scss
+++ b/src/components/TaskList/TaskListLayout/TaskListLayout.scss
@@ -19,6 +19,7 @@
 		aspect-ratio: 1 / 1;
 		font-size: rem(60);
 		border-radius: 50%;
+		box-shadow: var(--shadow);
 
 		@include mobile {
 			width: 90%;
